Refactor: Fix test generation pipeline and clean up broken tests
- Fix critical bug in JavaParserCodeSynthesizer where class wrappers were stripped during repair.
- Update AgentFactory to enforce @ParameterizedTest and FIXME comments.
- Enhance GenerateCommand and ScenarioProcessingPipeline for better self-healing.
- Clean up broken legacy test files in sample-project.
- Generate working SmsClientImplTest with proper test cases.